Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5312

Perforce: 'Automatically open files when editing' not working anymore

XMLWordPrintable

    • 7efb3c35a5e50843657815e755efdb4bffaed231

      This is a regression since 2.2.

      When editing a file that is under Perforce version control, and trying to save it, the file is no longer automatically opened but instead an error dialog pops up (even though the option 'Automatically open files when editing' is enabled). It is currently necessary to click "Make writable" before saving the file, which is annoying.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            bjorn Thorbjørn Lindeijer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes