VCS: Fix auto-opening on files in VCS

Fix auto-opening of files under version control for VCSes that need it
(e.g. Perforce).

Task-number: QTCREATORBUG-5312
Change-Id: Ifc26d062c0f2a92a06d83ccc8664640699e5dc5d
Reviewed-on: http://codereview.qt.nokia.com/2450
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>